clikcpesa added... time to check

--- a/views/pages/vip.ejs
+++ b/views/pages/vip.ejs
@@ -107,8 +107,8 @@
    <% } %>
 </div>
 
-
-<%- include('../partials/modals/payment-form.ejs'); %>
+<!-- insert payment form here.... remember only one form should be used at a time as they share the same modal ID and requests -->
+<%- include('../partials/modals/clickpesa-payment-form.ejs'); %>
 
 <script>
   //prevent body scroll when modal is open
