--- a/views/partials/modals/clickpesa-payment-form.ejs
+++ b/views/partials/modals/clickpesa-payment-form.ejs
@@ -14,7 +14,6 @@
               <div
                 class="networks d-flex flex-nowrap align-items-center justify-content-center gap-2 bg-light rounded-3 mt-3 px-4 mx-auto"
                 style="width: fit-content; height: 40px; overflow: hidden;">
-                <img src="/images/mpesa.png" style="width: 30px; height: 30px; object-fit: cover;" alt="Vodacom M-Pesa">
                 <img src="/images/mixx.png" style="width: 30px; height: 30px; object-fit: cover;" alt="Mixx by Yas">
                 <img src="/images/airtel.png" style="width: 30px; height: 30px; object-fit: cover;" alt="Airtel Money">
                 <img src="/images/halopesa.png" style="width: 30px; height: 30px; object-fit: cover;" alt="Halopesa">
@@ -36,6 +35,7 @@
                       pattern="[1-9][0-9]{8}" minlength="9" maxlength="9" placeholder="Mfano: 712345678"
                       autocomplete="tel" required>
                   </div>
+                  <div class="small text-muted mt-0 mb-2 ps-1"><i class="fa-solid fa-circle-info"></i> Tigo, Airtel au Halotel.</div>
                 </div>
                 <!-- Inline feedback area for errors (updated via OOB swap) -->
                 <div id="pay-form-feedback" class="d-none"></div>
