--- a/views/pages/vip.ejs
+++ b/views/pages/vip.ejs
@@ -63,7 +63,7 @@
               uhakika kila siku</li>
             <li class="d-flex align-items-center gap-2 mb-2"><i class="fa-solid fa-shield-halved text-success"></i>
               Utabiri uliopitiwa na wachambuzi</li>
-            <li class="d-flex align-items-center gap-2 mb-2"><i class="fa-solid fa-sack-dollar text-primary"></i> Ushindi wa 90%+</li>
+            <li class="d-flex align-items-center gap-2 mb-2"><i class="fa-solid fa-sack-dollar text-primary"></i> Ushindi mara 5 hadi 7 kwa wiki</li>
           </ul>
           <div class="alert alert-info small mb-3 text-center">
             <span class="d-block">Lipia kufungua mikeka ya VIP</span>
