--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -34,10 +34,10 @@
           aria-hidden="true"
         ></span>
       </button>
-      <div class="d-flex justify-content-between mt-3">
-        <a href="/auth/register" class="text-decoration-none">Huna akaunti? Jisajili</a>
-        <a href="/auth/reset" class="text-decoration-none">Umesahau nenosiri?</a>
-      </div>
+      <ul class="d-lg-flex justify-content-between mt-3 px-3" style="list-style: circle;">
+        <li>Huna akaunti? <a href="/auth/register" class="text-decoration-none">Jisajili Hapa</a></li>
+        <li><a href="/auth/reset" class="text-decoration-none d-block">Umesahau password?</a></li>
+      </ul>
     </form>
   </section>
 </div>
