--- a/views/partials/btts-cards.ejs
+++ b/views/partials/btts-cards.ejs
@@ -1,7 +1,7 @@
 <% if (!tips || tips.length === 0) { %>
 <div class="alert alert-info mb-0">Hakuna mikeka kwa siku hii.</div>
 <% } else { %>
-<div class="row row-cols-1 row-cols-lg-2 g-3">
+<div class="row row-cols-1 row-cols-lg-2 gx-3 gy-4 mt-3">
   <% tips.forEach((tip) => { %>
   <div class="col">
     <div class="btts-card shadow-sm">
